--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- open graph tags -->
 	<title>Shali Peng - Software Engineer</title>
 	<meta property="og:title" content="Shali Peng - Full-Stack Software Engineer" />
-	<meta property="og:url" content="www.shalipeng.com" />
+	<meta property="og:url" content="" />
 	<meta property="og:image" content="" />
 	<meta name="description" content="Portfolio of Shali Peng">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
