--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	<div class="site-logo">
 		<a href="index.html">
 			<h1>Portfolio</h1>
-			<!-- <img src="images/JB-Sig-W.svg" alt="Jacob Benowitz" /> -->
+			<!-- <img src="images/JB-Sig-W.svg" alt="" /> -->
 		</a>
 	</div>
 	
@@ -177,7 +177,7 @@
 								</p>
 
 								<div class="spacer" data-height="30"></div>
-								<!-- <a href="https://github.com/DingoDang1113" target="_blank" alt="view on GitHub: u/jacobbenowitz"> -->
+								<!-- <a href="https://github.com/DingoDang1113" target="_blank" alt="view on GitHub:"> -->
 								</a>
 
 							</div>
@@ -290,7 +290,7 @@
 				<!-- section title -->
 				<h2 class="section-title wow fadeInUp">Experience</h2>
 				<div class="spacer" data-height="20"></div>
-				<a href="https://drive.google.com/file/d/1nXVPJLiDCAR1pBvU7ap1aHMx8D1jEGZa/view?usp=sharing" alt="Shali's Resume" class="btn btn-default cv-exp">Download Resume</a>
+				<a href="https://drive.google.com/file/d/1E91aKo0Eyi8-V2pcLhfmsMVzqiMHYT8G/view?usp=sharing" alt="Shali's Resume" class="btn btn-default cv-exp">Download Resume</a>
 				<div class="spacer" data-height="60"></div>
 				
 				<div class="row">
