update about me

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 							<div class="row-md-6">
 								<!-- about text -->
 								<p>
-									Hi, there! My namis is Shali Peng and I'm a software engineer. 
+									Hello! I'm Shali Peng, a software engineer with a rich background in reporting and analytics within the HR realm. Throughout my seven years of professional experience, I've nurtured a passion for problem-solving through data. This journey illuminated the pivotal role tools play in crafting solutions and breaking boundaries. I revel in pushing limits, unlocking new possibilities for users, and it's this drive to innovate that motivated me to pivot and reboot my career. I'm on a mission to create efficient tools that bring tangible transformations to businesses.   
 									
 								</p>
 
